# python_web_hw9_Scrapy

./: README.md  authors.json  quotes.json  test.py
env/: pyproject.toml
env/env/: config.ini  connect.py  create.py  decor.py  main.py  models.py  search.py  terminal_bot.py
